src/test/deca/context/invalid/bad_method_name.deca
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float int(float poidsNourriture) {
        poids = poids + poidsNourriture;
        return poids;


}
